--- a/src/components/TarotCard/TarotCard.css
+++ b/src/components/TarotCard/TarotCard.css
@@ -1,9 +1,11 @@
 .tarot-card {
   text-align: center;
   margin: 10px;
+  width: 150px;
+  align-items: flex-start;
 }
 
 .tarot-card img {
-  width: 100px;
-  height: 150px;
+  width: 100%;
+  height: auto;
 }
